force-app/main/default/objects/NF_Accelerator_Feedback__c/NF_Accelerator_Feedback__c.object-meta.xml
<CustomObject>
    <description>Tracks whether a recommended accelerator was useful for a given project context. Feeds the ranking improvement loop.</description>
    <label>NF Accelerator Feedback</label>
    <nameField>
        <displayFormat>FB-{0000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NF Accelerator Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>