force-app/main/default/objects/NF_Accelerator_Feedback__c/fields/Accelerator__c.field-meta.xml
<CustomField>
    <fullName>Accelerator__c</fullName>
    <label>Accelerator</label>
    <referenceTo>NF_Accelerator__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>