force-app/main/default/objects/NF_Accelerator_Feedback__c/fields/Fit_Score_At_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score_At_Recommendation__c</fullName>
    <label>Fit Score at Recommendation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>The score (0-100) the system assigned when this accelerator was recommended. Used to calibrate ranking over time.</description>
</CustomField>