force-app/main/default/objects/NF_Accelerator_Feedback__c/fields/Is_Useful__c.field-meta.xml
<CustomField>
    <fullName>Is_Useful__c</fullName>
    <label>Was this useful?</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>