force-app/main/default/objects/NF_Accelerator_Feedback__c/fields/Project_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Record_Id__c</fullName>
    <label>Project Record ID</label>
    <length>18</length>
    <type>Text</type>
    <description>Stores the Opportunity or Project record ID this feedback was captured from.</description>
</CustomField>